# odyssey

./: .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  readme.md
.claude/skills/: add-persona.md  diagnose-inpersona.md  manage-ionos-dns.md  redeploy-backend.md  redeploy-frontend.md  run-chat-test-suite.md  start-local-stack.md  tune-rag-quality.md  update-inpersona-kb.md
.claude/workflows/: test-chat-modes.js
.github/: dependabot.yml
.github/scripts/: smoke_chat.py
.github/workflows/: backend.yml  frontend.yml  smoke-test.yml
backend/: .dockerignore  .env  .env.example  Dockerfile  client.py  conftest.py  kg.html  pyproject.toml  server.py  settings.py  test.py
backend/chat/: CacheManager.py  ChatManager.py  ChromaClient.py  Knowledge_graph1.py  ModelsManager.py  VectorStore_manager.py  chatdata.py  kg.html  metrics.py  output_filter.py  prompt.py  query_engine.py  rate_limiter.py  retry.py  schemas.py  settings.py  test.py  vector_store_manager.py
backend/chat/storage_Kg/: docstore.json  index_store.json  property_graph_store.json
backend/chroma_db/: chroma.sqlite3
backend/documents/: resume.txt
backend/storage/: docstore.json  index_store.json  property_graph_store.json
backend/test_docs/: resume.txt
backend/tests/: test_output_filter.py  test_query_engine.py  test_rate_limiter.py  test_retry.py  test_schemas.py  test_server_endpoints.py
deploy/: .env.example  .gitignore  Caddyfile  README.md  docker-compose.yml
deploy/documents-nupur/: resume.txt
deploy/personas/: nupur.prompt.txt
frontend/: .env.example  README.md  package-lock.json  package.json  tailwind.config.js
frontend/components/: Layout.tsx  NextImage.tsx  Seo.tsx  ThemeToggle.tsx
frontend/components/animations/: DitherCanvas.tsx  OpenNotifAnimation.tsx  TaskbundlePoster.tsx
frontend/components/primitives/: GradientHeading.tsx  InpersonaNavLink.tsx  SectionCard.tsx  SectionHeading.tsx
frontend/context/: ThemeContext.tsx
frontend/hooks/: useIsMobile.ts
frontend/pages/: _app.tsx  _document.tsx  index.json  index.tsx  inpersona.tsx  knowledge-graph.tsx  loading.tsx
frontend/pages/components/: Achievements.tsx  ContactForm.tsx  ContactModal.tsx  Experience.tsx  Footer.tsx  Header.tsx  Hero.tsx  InpersonaButton.tsx  InpersonaChat.tsx  InpersonaLoading.tsx  Projects.tsx  Skills.tsx  Testimonials.tsx  TextRotator.tsx  Tooltip.tsx
frontend/pages/inpersona/: knowledgegraph.tsx
frontend/public/: kg.html
frontend/styles/: globals.css
frontend/types/: config.ts  icons.ts
