[project]
name = "odyssey-backend"
version = "0.1.0"
description = "RAG backend for Inpersona, the chatbot that answers as Yatharth Kapadia."
readme = "README.md"
requires-python = ">=3.10,<3.13"
authors = [
    { name = "Yatharth Kapadia", email = "yatharthkapadia2@gmail.com" },
]

dependencies = [
    # Web layer
    "fastapi>=0.115.8,<0.116.0",
    "uvicorn[standard]>=0.30.0,<1.0.0",
    # websockets 14+ removed transfer_data_task from the legacy protocol that
    # uvicorn's websockets_impl still uses, so close() raises AttributeError on
    # every disconnect. Pin <14 until uvicorn moves off the legacy API.
    "websockets>=12.0,<14.0",
    "python-dotenv>=1.0.1,<2.0.0",

    # LlamaIndex stack — pinned hard. The 0.11.x API was reshuffled across
    # minor releases; bumping any of these usually requires code changes in
    # ModelsManager / vector_store_manager / query_engine.
    "llama-index-core==0.11.19",
    "llama-index-embeddings-huggingface==0.3.1",
    "llama-index-llms-groq==0.2.0",
    "llama-index-llms-gemini==0.3.7",
    "llama-index-vector-stores-chroma==0.2.1",
    "llama-index-readers-file==0.2.2",

    # Vector store + embeddings runtime
    "chromadb==0.5.15",
    "transformers==4.45.2",
    # sentence-transformers 5.x removed .device from SentenceTransformer, which
    # the pinned llama-index-embeddings-huggingface still relies on.
    "sentence-transformers>=3.0,<4.0",

    # Cache + visualization + CLI
    "redis>=5.0.0,<6.0.0",
    "pyvis>=0.3.2,<0.4.0",
    "ipython>=8.32.0,<9.0.0",
    "colorama>=0.4.6,<0.5.0",
]

[tool.uv]
package = false
