[project]
name = "odyssey-backend"
version = "0.1.0"
description = "RAG backend for Inpersona, the chatbot that answers as Yatharth Kapadia."
readme = "README.md"
requires-python = ">=3.10,<3.13"
authors = [
    { name = "Yatharth Kapadia", email = "yatharthkapadia2@gmail.com" },
]

dependencies = [
    # Web layer
    "fastapi>=0.115.8,<0.137.0",
    "uvicorn[standard]>=0.30.0,<1.0.0",
    # websockets 14+ removed transfer_data_task from the legacy protocol that
    # uvicorn's websockets_impl still uses, so close() raises AttributeError on
    # every disconnect. Pin <14 until uvicorn moves off the legacy API.
    "websockets>=12.0,<14.0",
    "python-dotenv>=1.0.1,<2.0.0",
    # LlamaIndex stack — pinned hard. The 0.11.x API was reshuffled across
    # minor releases; bumping any of these usually requires code changes in
    # ModelsManager / vector_store_manager / query_engine.
    "llama-index-core==0.11.19",
    "llama-index-embeddings-huggingface==0.3.1",
    "llama-index-llms-groq==0.2.0",
    "llama-index-llms-gemini==0.3.7",
    "llama-index-vector-stores-chroma==0.2.1",
    "llama-index-readers-file==0.2.2",
    # Vector store + embeddings runtime
    "chromadb==0.5.15",
    "transformers==4.45.2",
    # sentence-transformers 5.x removed .device from SentenceTransformer, which
    # the pinned llama-index-embeddings-huggingface still relies on.
    "sentence-transformers>=3.0,<4.0",
    # Cache + visualization + CLI
    "redis>=5.0.0,<6.0.0",
    "pyvis>=0.3.2,<0.4.0",
    "ipython>=8.32.0,<9.0.0",
    "colorama>=0.4.6,<0.5.0",
    "llama-index-llms-openai>=0.2.0,<0.3.0",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "ruff>=0.7,<1.0",
]

# ----------------------------------------------------------------------------
# ruff — lint + format. Sensible defaults; opt into a few extra rule sets but
# nothing too opinionated. Format is black-equivalent. Run via:
#   uv run ruff format .            # reformat
#   uv run ruff check . --fix       # autofix what's safe
#   uv run ruff check .             # CI mode (no autofix)
# ----------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [".venv", "storage", "chroma_db", "lib", "documents", "kg.html"]

[tool.ruff.lint]
# Curated rule sets. Keep additions justified — over-strict ruff is noise.
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes (unused imports, undefined names — high signal)
    "W",    # pycodestyle warnings
    "I",    # isort (import ordering)
    "UP",   # pyupgrade (modern Python idioms)
    "B",    # flake8-bugbear (common gotchas — mutable default args, etc.)
    "SIM",  # flake8-simplify
    "RUF",  # ruff-native rules
]
ignore = [
    "E501",   # line-too-long — format handles long strings reasonably; don't double-warn
    "B008",   # function calls in defaults — FastAPI Depends() pattern uses this
    "SIM112", # env var capitalization — Google_Gemini_API_KEY is intentional for backward compat
]

[tool.ruff.lint.per-file-ignores]
# Snake-case mismatch: kept for backward compat with existing import callers.
"chat/ChatManager.py"     = ["N802", "N803"]
"chat/ChromaClient.py"    = ["N802"]
"chat/ModelsManager.py"   = ["N802"]
"server.py"               = ["N802"]
# The system prompt is load-bearing prose — don't let ruff "fix" whitespace,
# en-dashes, or other typography that the model may be sensitive to.
"chat/prompt.py"          = ["W291", "W293", "RUF001", "RUF002", "RUF003"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
