[project]
name = "odyssey-backend"
version = "0.1.0"
description = "RAG backend for Inpersona, the chatbot that answers as Yatharth Kapadia."
readme = "README.md"
requires-python = ">=3.10,<3.13"
authors = [
    { name = "Yatharth Kapadia", email = "yatharthkapadia2@gmail.com" },
]

dependencies = [
    # Web layer
    # fastapi >=0.116 is required to pull a patched starlette (>=0.47.2); the
    # 0.115.x line caps starlette below the security fix.
    "fastapi>=0.116.0,<0.117.0",
    "uvicorn[standard]>=0.30.0,<1.0.0",
    # websockets 14+ removed transfer_data_task from the legacy protocol that
    # uvicorn's websockets_impl still uses, so close() raises AttributeError on
    # every disconnect. Pin <14 until uvicorn moves off the legacy API.
    "websockets>=12.0,<17.0",
    "python-dotenv>=1.0.1,<2.0.0",
    # LlamaIndex stack — migrated 0.11 -> 0.13 to clear the security advisories
    # against llama-index-core. Compatible ranges (uv.lock pins the resolved
    # versions). The Gemini integration moved off the deprecated
    # llama-index-llms-gemini to llama-index-llms-google-genai (GoogleGenAI).
    "llama-index-core>=0.13.0,<0.14.0",
    "llama-index-embeddings-huggingface>=0.4.0,<0.7.0",
    "llama-index-llms-groq>=0.3.0,<0.6.0",
    "llama-index-llms-google-genai>=0.2.0,<0.6.0",
    "llama-index-vector-stores-chroma>=0.4.0,<0.6.0",
    "llama-index-readers-file>=0.4.0,<0.6.0",
    "llama-index-llms-openai>=0.3.0,<0.6.0",
    # Vector store + embeddings runtime
    "chromadb>=0.5.15,<0.7.0",
    "transformers>=4.53.0,<5.0.0",
    # sentence-transformers 5.x removed .device from SentenceTransformer, which
    # the huggingface embeddings integration relied on; keep <5 for safety.
    "sentence-transformers>=3.0,<5.0",
    # Cache + visualization + CLI
    "redis>=5.0.0,<6.0.0",
    "pyvis>=0.3.2,<0.4.0",
    "ipython>=8.32.0,<9.0.0",
    "colorama>=0.4.6,<0.5.0",
    # Resilience + observability
    "tenacity>=8.0,<10.0",
    "prometheus-client>=0.20,<1.0",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "ruff>=0.7,<1.0",
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.24,<0.25",
]

# ----------------------------------------------------------------------------
# pytest — unit suite for the hardening layer (rate limiter, output redaction,
# retry, request schema, metrics, query-engine streaming, health endpoints).
# These exercise the new logic in isolation; they do NOT spin up the full RAG
# stack (no API keys / model downloads). Run via:
#   uv run pytest                   # whole suite
#   uv run pytest tests/test_x.py   # one file
# ----------------------------------------------------------------------------
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    # Third-party (pydantic v2 via llama-index) deprecation noise, not ours.
    "ignore::DeprecationWarning",
]

# ----------------------------------------------------------------------------
# ruff — lint + format. Sensible defaults; opt into a few extra rule sets but
# nothing too opinionated. Format is black-equivalent. Run via:
#   uv run ruff format .            # reformat
#   uv run ruff check . --fix       # autofix what's safe
#   uv run ruff check .             # CI mode (no autofix)
# ----------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [".venv", "storage", "chroma_db", "lib", "documents", "kg.html"]

[tool.ruff.lint]
# Curated rule sets. Keep additions justified — over-strict ruff is noise.
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes (unused imports, undefined names — high signal)
    "W",    # pycodestyle warnings
    "I",    # isort (import ordering)
    "UP",   # pyupgrade (modern Python idioms)
    "B",    # flake8-bugbear (common gotchas — mutable default args, etc.)
    "SIM",  # flake8-simplify
    "RUF",  # ruff-native rules
]
ignore = [
    "E501",   # line-too-long — format handles long strings reasonably; don't double-warn
    "B008",   # function calls in defaults — FastAPI Depends() pattern uses this
    "SIM112", # env var capitalization — Google_Gemini_API_KEY is intentional for backward compat
]

[tool.ruff.lint.per-file-ignores]
# Snake-case mismatch: kept for backward compat with existing import callers.
"chat/ChatManager.py"     = ["N802", "N803"]
"chat/ChromaClient.py"    = ["N802"]
"chat/ModelsManager.py"   = ["N802"]
"server.py"               = ["N802"]
# The system prompt is load-bearing prose — don't let ruff "fix" whitespace,
# en-dashes, or other typography that the model may be sensitive to.
"chat/prompt.py"          = ["W291", "W293", "RUF001", "RUF002", "RUF003"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
